force-app/main/default/objects/Lead/fields/Cargo_del_Candidato__c.field-meta.xml
<CustomField>
    <fullName>Cargo_del_Candidato__c</fullName>
    <label>Cargo del Candidato</label>
    <length>100</length>
    <type>Text</type>
</CustomField>