force-app/main/default/objects/Lead/fields/Causa_de_Descarte__c.field-meta.xml
<CustomField>
    <fullName>Causa_de_Descarte__c</fullName>
    <label>Causa de Descarte</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ubicación Geográfica</fullName>
            </value>
            <value>
                <fullName>Monto del Proyecto</fullName>
            </value>
            <value>
                <fullName>Alcance del Proyecto</fullName>
            </value>
            <value>
                <fullName>Tipo de Cliente</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>