force-app/main/default/objects/Lead/fields/Celular_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Celular_de_Contacto__c</fullName>
    <label>Celular de Contacto</label>
    <length>15</length>
    <type>Text</type>
</CustomField>