force-app/main/default/objects/Lead/fields/Correo_Electr_nico_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electr_nico_Contacto__c</fullName>
    <label>Correo Electrónico</label>
    <type>Email</type>
</CustomField>