force-app/main/default/objects/Lead/fields/Direcci_n__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n__c</fullName>
    <label>Dirección</label>
    <length>255</length>
    <type>Text</type>
</CustomField>