force-app/main/default/objects/Lead/fields/Fecha_Estimada_de_Contrataci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Estimada_de_Contrataci_n__c</fullName>
    <label>Fecha Estimada de Contratación</label>
    <type>Date</type>
</CustomField>