force-app/main/default/objects/Lead/fields/Gerente_Encargado__c.field-meta.xml
<CustomField>
    <fullName>Gerente_Encargado__c</fullName>
    <label>Gerente Encargado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gerente_Comercial_Encargado</valueSetName>
    </valueSet>
</CustomField>