force-app/main/default/objects/Lead/fields/Mercado_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Mercado_Vertical__c</fullName>
    <label>Mercado Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mercado_Vertical</valueSetName>
    </valueSet>
</CustomField>