force-app/main/default/objects/Lead/fields/NIT__c.field-meta.xml
<CustomField>
    <fullName>NIT__c</fullName>
    <label>NIT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>