force-app/main/default/objects/Lead/fields/Nombre_de_la_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_Empresa__c</fullName>
    <label>Nombre de la Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>