force-app/main/default/objects/Lead/fields/Podemos_Atender_la_Soluci_n_Requerida__c.field-meta.xml
<CustomField>
    <fullName>Podemos_Atender_la_Soluci_n_Requerida__c</fullName>
    <label>¿Podemos Atender la Solución Requerida?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>