force-app/main/default/objects/Lead/fields/Tel_fono_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Tel_fono_de_Contacto__c</fullName>
    <label>Celular</label>
    <type>Phone</type>
</CustomField>