force-app/main/default/objects/Lead/fields/Tipo_de_Soluci_n_Requerida__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Soluci_n_Requerida__c</fullName>
    <label>Tipo de Solución Requerida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Soluci_n_Requerida</valueSetName>
    </valueSet>
</CustomField>