force-app/main/default/objects/Lead/validationRules/First_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Por favor diligencie el nombre.</errorMessage>
</ValidationRule>