force-app/main/default/objects/Lead/validationRules/Validacion_Celular.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Celular</fullName>
    <active>true</active>
    <description>Valida que el celular esté en el formato correcto.</description>
    <errorConditionFormula>NOT(REGEX( Celular_de_Contacto__c , &quot;^[0-9]{10}$&quot;))</errorConditionFormula>
    <errorDisplayField>Tel_fono_de_Contacto__c</errorDisplayField>
    <errorMessage>Digitar un número de teléfono válido.</errorMessage>
</ValidationRule>