force-app/main/default/objects/Lead/validationRules/Validacion_Convertido_InformacionGeneral.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Convertido_InformacionGeneral</fullName>
    <active>true</active>
    <description>Verifica que los campos básicos estén diligenciados de manera obligatoria para convertir el Lead.</description>
    <errorConditionFormula>AND(OR(ISBLANK(  Nombre_del_Proyecto__c ), ISBLANK(  Cargo_del_Candidato__c  ),ISPICKVAL(  C_mo_conoci_Thermoandina__c , &quot;&quot;), ISPICKVAL( Mercado_Vertical__c , &quot;&quot;),  ISBLANK( Company ),  ISBLANK( FirstName )   ),ISPICKVAL( Status , &quot;Convertido&quot;))</errorConditionFormula>
    <errorMessage>Por favor confirme que todos los campos existentes en la sección &quot;Información General&quot; se encuentran diligenciados, de lo contrario no será posible continuar con el proceso.</errorMessage>
</ValidationRule>