force-app/main/default/objects/Lead/validationRules/Validacion_Convertido_UbicacionYContacto.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Convertido_UbicacionYContacto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(  Departamento_Ejecucion__c, &quot;&quot;), ISPICKVAL( Municipio_Ejecucion__c , &quot;&quot;), ISBLANK(  Celular_de_Contacto__c ), ISBLANK( Correo_Electr_nico_Contacto__c )),ISPICKVAL( Status , &quot;Convertido&quot;))</errorConditionFormula>
    <errorMessage>Por favor confirme que todos los campos existentes en la sección &quot;Ubicación y Contacto&quot; se encuentran diligenciados, de lo contrario no será posible continuar con el proceso.</errorMessage>
</ValidationRule>