force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Tel_fono_de_Contacto__c</columns>
    <columns>Correo_Electr_nico_Contacto__c</columns>
    <columns>Tipo_de_Soluci_n_Requerida__c</columns>
    <columns>Departamento_Ejecucion__c</columns>
    <columns>Municipio_Ejecucion__c</columns>
    <columns>Descripci_n_Detallada__c</columns>
    <columns>Cargo_del_Candidato__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified</value>
    </filters>
    <label>All Open Leads</label>
</ListView>